fixed bug where a random bar appeared on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@
   --redGradientBackground: conic-gradient(from var(--angle), #FF204E, #A0153E, #5D0E41, #2e004d, #FF204E);
   background-color: #242424;
   scroll-behavior: smooth;
+  height: 100%;
 }
 
 p, h1, h2 {
@@ -48,6 +49,7 @@ body {
   padding: 0;
   justify-content: center;
   text-align: center;
+  height: 100%;
 }
 
 #root {
@@ -498,6 +500,6 @@ h1, h2, p {
   }
 
   divider {
-    display: none;
+    visibility: hidden;
   }
 }
